fixed alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1112,7 +1112,7 @@ blockquote {
    Blog Listing Page
    ========================================================================== */
 .blog-header {
-    text-align: center;
+    text-align: left;
     margin-bottom: 3rem;
 }
 
